# pycramer

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
pycramer/: __init__.py  _lookup.cpp  cramer.py
